--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="nojs">
 <head>
-  <title>HTML Form Elements</title>
+  <title>Project 1 ITMD-362</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no">
   <link rel="stylesheet" media="screen" href="css/meyers_and_normalize-form_reset.css">
@@ -9,9 +9,30 @@
 </head>
 <body>
 <main id="content">
-  <form method="get" action="#null">
- 
-  </form>
+  <h1>Title</h1>
+    <form>
+      <div id="firstName">
+        <label for="fname">Enter your first name:</label>
+        <input type="text" id="fname" name="fname">
+      </div>
+      <div id="lastName">
+        <label for="lname">Enter your last name:</label>
+        <input type="text" id="lname" name="lname">
+      </div>
+      <div id="emailgroup">
+        <label for="email">Enter your email:</label>
+        <input type="email" id="email" maxlength="50">
+      </div>
+      <div id="phonegroup">
+        <label for="phone">Enter your phone number:</label>
+        <input type="tel" id="phone" name="phone" pattern="[0-9]{10}">
+      </div>
+      <div id="birthgroup">
+        <label for="birthday">Optional: Enter your birthday for a free gift!</label>
+        <input type="date" id="birthday" name="birthday">
+      </div>
+        <input type="submit" value="Submit">
+    </form>
 </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="js/site.js"></script>
