--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <label for="birthday">Enter your birthday for the gift!</label>
         <input type="date" id="birthday" name="birthday" required>
       </div>
+      <div id="submitgroup"
         <input type="submit" name="submit id="submit" value="Submit">
+      </div>
     </form>
 </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
