--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
 <body>
 <main id="content">
   <h1>Sign up to get free things!</h1>
-    <p>All forms must be filled to be submitted</p>
+    <p>All forms must be filled to be submitted.</p>
     <form>
       <div id="firstName">
-        <label for="fname">Enter your first name:</label>
+        <label for="fname">Enter your first name: </label>
         <input type="text" id="fname" name="fname" required>
       </div>
       <div id="lastName">
-        <label for="lname">Enter your last name:</label>
+        <label for="lname">Enter your last name: </label>
         <input type="text" id="lname" name="lname" required>
       </div>
       <div id="emailgroup">
-        <label for="email">Enter your email:</label>
+        <label for="email">Enter your email: </label>
         <input type="email" id="email" maxlength="50" required>
       </div>
       <div id="phonegroup">
-        <label for="phone">Enter your phone number:</label>
+        <label for="phone">Enter your phone number: </label>
         <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required>
       </div>
       <div id="birthgroup">
-        <label for="birthday">Enter your birthday for the gift!</label>
+        <label for="birthday">Enter your birthday for the gift! </label>
         <input type="date" id="birthday" name="birthday" required>
       </div>
       <input type="submit" name="submit id="submit" value="Submit">
