--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       </div>
       <input type="submit" name="submit id="submit" value="Submit">
     </form>
+    <img src="media/present.jpg" alt="present">
 </main>
 </body>
 </html>
