--- a/index.html
+++ b/index.html
@@ -37,5 +37,11 @@
       <input type="submit" name="submit id="submit" value="Submit">
     </form>
 </main>
+  <footer id="indexfoot">
+    <p>Created by Zealous Godwin.</p>
+  <address>
+    <p><a href="mailto:agodwin1@hawk.iit.edu">agodwin1@hawk.iit.edu</a></p>
+  </address>
+  </footer>
 </body>
 </html>
