--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     </form>
 </main>
   <footer id="indexfoot">
-    <p>Created by Zealous Godwin.</p>
+    <h3>Created by Zealous Godwin.</h3>
   <address>
-    <p><a href="mailto:agodwin1@hawk.iit.edu">agodwin1@hawk.iit.edu</a></p>
+    <p><h4 href="mailto:agodwin1@hawk.iit.edu">agodwin1@hawk.iit.edu</a></h4>
   </address>
   </footer>
 </body>
