silly goofy typo fixing

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <footer id="indexfoot">
     <h3>Created by Zealous Godwin.</h3>
   <address>
-    <p><h4 href="mailto:agodwin1@hawk.iit.edu">agodwin1@hawk.iit.edu</a></h4>
+    <h4><a href="mailto:agodwin1@hawk.iit.edu">agodwin1@hawk.iit.edu</a></h4>
   </address>
   </footer>
 </body>
