i want the js to work please

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <label for="birthday">Enter your birthday for the gift! </label>
         <input type="date" id="birthday" name="birthday" required>
       </div>
-      <input type="submit" name="submit" id="submit" value="Submit">
+      <div id="input-submit">
+        <input type="submit" name="submit" id="submit" value="Subscribe">
+      </div>
     </form>
 </main>
   <footer id="indexfoot">
