--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <footer id="indexfoot">
     <h3>Created by Zealous Godwin.</h3>
   <address>
-    <h4><a href="mailto:agodwin1@hawk.iit.edu">agodwin1@hawk.iit.edu</a></h4>
+    <a href="mailto:agodwin1@hawk.iit.edu">agodwin1@hawk.iit.edu</a>
   </address>
   </footer>
 </body>
