--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no">
   <link rel="stylesheet" media="screen" href="css/meyers_and_normalize-form_reset.css">
   <link rel="stylesheet" media="screen" href="css/screen.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" async="async"></script>
-  <script src="js/site.js"></script>
 </head>
 <body>
 <main id="content">
@@ -45,5 +43,7 @@
     <a href="mailto:agodwin1@hawk.iit.edu">agodwin1@hawk.iit.edu</a>
   </address>
   </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="js/site.js"></script>
 </body>
 </html>
