i just looked at lab 2. fixing stuff now

--- a/index.html
+++ b/index.html
@@ -13,31 +13,31 @@
 <main id="content">
   <h1>Sign up to get free things!</h1>
     <p>All forms must be filled to be submitted. Once submitted, you will recieve a free thing!</p>
-    <form method="get" action="#null">
-      <div id="firstName">
-        <label for="fname">Enter your first name: </label>
-        <input type="text" id="fname" name="fname" required>
-      </div>
-      <div id="lastName">
-        <label for="lname">Enter your last name: </label>
-        <input type="text" id="lname" name="lname" required>
-      </div>
-      <div id="emailgroup">
-        <label for="email">Enter your email: </label>
-        <input type="email" id="email" maxlength="50" required>
-      </div>
-      <div id="phonegroup">
-        <label for="phone">Enter your phone number: </label>
-        <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required>
-      </div>
-      <div id="birthgroup">
-        <label for="birthday">Enter your birthday for the gift! </label>
-        <input type="date" id="birthday" name="birthday" required>
-      </div>
-      <div id="input-submit">
-        <input type="submit" name="submit" id="submit" value="Subscribe">
-      </div>
-    </form>
+  <form method="get" action="#null" autocomplete="on">
+    <div id="firstName">
+      <label for="fname">Enter your first name: </label>
+      <input type="text" id="fname" name="fname" required>
+    </div>
+    <div id="lastName">
+      <label for="lname">Enter your last name: </label>
+      <input type="text" id="lname" name="lname" required>
+    </div>
+    <div id="emailgroup">
+      <label for="email">Enter your email: </label>
+      <input type="email" id="email" maxlength="50" required>
+    </div>
+    <div id="phonegroup">
+      <label for="phone">Enter your phone number: </label>
+      <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required>
+    </div>
+    <div id="birthgroup">
+      <label for="birthday">Enter your birthday for the gift! </label>
+      <input type="date" id="birthday" name="birthday" required>
+    </div>
+    <div id="input-submit">
+      <input type="submit" name="submit" id="submit" value="Subscribe">
+    </div>
+  </form>
 </main>
   <footer id="indexfoot">
     <h3>Created by Zealous Godwin.</h3>
