there are tears on my keyboard from this

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <main id="content">
   <h1>Sign up to get free things!</h1>
-    <p>All forms must be filled to be submitted. Once submitted, you will recieve a free thing!</p>
+    <p>All forms must be filled to be submitted.</p>
   <form method="get" action="#null" autocomplete="on">
     <div id="firstName">
       <label for="fname">Enter your first name: </label>
