added validation and changed submit

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <input type="date" id="birthday" name="birthday" required>
     </div>
     <div id="input-submit">
-      <input type="submit" name="submit" id="submit" value="Sign Up Now!">
+      <input type="submit" name="submit" id="submit" value="Get The Present!">
     </div>
   </form>
 </main>
